# vinos

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  LICENSE.md  Makefile  README.md  ReadMe.md  ReleaseNotes.md  codemeta.json  environment-dev.yaml  mkdocs.yml  pyproject.toml
.docker/: Dockerfile  Dockerfile-gui  Dockerfile-headless  Dockerfile-jdk  Dockerfile-netlogo  Dockerfile-pandoc  Dockerfile-vinos  Makefile
.gitlab/: docker.yaml  joss.yaml  license.yaml  odd.yaml  ort.yaml  pandoc.yaml  readthedocs.yaml  zenodo.yaml
.reuse/: dep5
LICENSES/: CC-BY-4.0.txt  LicenseRef-CC-BY-3.0-IGO.txt  LicenseRef-CreativeCommonsTrademark.txt  LicenseRef-DL-DE-BY-2.0.txt  LicenseRef-EMODNET-1.0.txt  LicenseRef-GEBCO-1.0.txt  LicenseRef-ICES-1.0.txt  LicenseRef-Pixabay.txt  LicenseRef-VIMS-Restricted.txt  ReadMe.md
R/: .gitignore  ReadMe.md  abm_test-output_map-plotting  abm_test-output_map-plotting.Rmd  convert-grd-tiff.r  netcdf_import_script_PBS.r  sol.ple.cra.biomasses.gri
assets/: 320px-Sprattus_sprattus.jpg.license  320px-Wijting002.jpg.license  ReadMe.md  Solea_solea_1.jpg.license  abm_flowchart.pdf.license  agents.pdf.license  apple-touch-icon.png.license  cc-by.pdf.license  favicon-16x16.png.license  logo-bmbf-funded.png.license  logo-hereon.png.license  logo-hsb.png.license  logo-mussel.png.license  logo-uhh.png.license  site.webmanifest.license  vinos_screenshot.png.license
data/: .gitignore  220126-one_year-landings-per_port-favorite.csv  220126-one_year-landings-per_port-home.csv  EMODnet_HA_WindFarms_pg_20211210.dbf  EMODnet_HA_WindFarms_pg_20211210.sbn  EMODnet_HA_WindFarms_pg_20211210.sbx  EMODnet_HA_WindFarms_pg_20211210.shp  EMODnet_HA_WindFarms_pg_20211210.shx  EMODnet_HA_WindFarms_pg_20220324.csv  EMODnet_HA_WindFarms_pg_20220324.dbf  EMODnet_HA_WindFarms_pg_20220324.shp  ReadMe.md  dis.20102014.winter.crangon_all.asc  dis.20102014.winter.merlangus_max.asc  (+11 more)
doc/: .gitignore  (+2 more)
(+290 files in other folders)
