# SPDX-FileCopyrightText: 2022-2023 Helmholtz-Zentrum hereon GmbH
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor: Carsten Lemmen <carsten.lemmen@hereon.de

[tool.poetry]
name = "Agent-based model of North Sea fisheries"
version = "1.2.0"
description = "Agent-based model of North Sea fisheries"
authors = [
    "Carsten Lemmen <carsten.lemmen@hereon.de>",
    "Sascha Hokamp <sascha.hokamp@uni-hamburg.de>",
    "Serra Örey <soerey@hs-bremerhaven.de>",
    "Nik Probst <nik.probst@thuenen.de",
    "Jürgen Scheffran <juergen.scheffran@uni-hamburg.de>",
    "Jieun Seo <jieun.seo@uni-hamburg.de",
    "Verena Mühlberger <verena.muehlberger@uni-hamburg.de",
    ]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
tabula-py = "^2.7.0"
pypdf = "^3.8.0"
holidays = "^0.24"
clevercsv = "^0.8.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
reuse = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
